# axiestudio-lang

./: .dockerignore  .env.example  .eslintrc.json  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  RAILWAY_ENV.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.do/: app.yaml
.github/workflows/: ci.yml  smoke-tests.yml  template-tests.yml
deploy/: .env.example
docker/: container-cmd-cdk.sh  dev.docker-compose.yml
docker/frontend/: start-nginx.sh
docs/: openapi.json  package-lock.json
docs/docs/Integrations/: AssemblyAI_Flow.json
docs/docs/Integrations/Cleanlab/: eval_and_remediate_cleanlab.json
scripts/aws/: .env.example  cdk.json  package-lock.json  package.json
scripts/aws/lib/construct/: backend.ts
scripts/ci/: update_starter_projects.py
src/backend/axieflow/version/: version.py
src/backend/base/: pyproject.toml
src/backend/base/axiestudio/: __main__.py  axiestudio_launcher.py  main.py  memory.py  middleware.py  server.py  worker.py
src/backend/base/axiestudio/alembic/: env.py
src/backend/base/axiestudio/api/: __init__.py  build.py  health_check_router.py  limited_background_tasks.py  log_router.py  router.py  utils.py
src/backend/base/axiestudio/base/: constants.py
src/backend/base/axiestudio/cli/: progress.py
src/backend/base/axiestudio/core/: celery_app.py  celeryconfig.py
src/backend/base/axiestudio/custom/: __init__.py  eval.py  utils.py
src/backend/base/axiestudio/events/: event_manager.py
src/backend/base/axiestudio/exceptions/: api.py  component.py
src/backend/base/axiestudio/field_typing/: __init__.py  constants.py
src/backend/base/axiestudio/graph/: __init__.py  schema.py  utils.py
src/backend/base/axiestudio/helpers/: data.py  flow.py  folders.py  user.py
src/backend/base/axiestudio/initial_setup/: constants.py  setup.py
src/backend/base/axiestudio/inputs/: input_mixin.py  inputs.py  utils.py
src/backend/base/axiestudio/interface/: components.py  listing.py  utils.py
src/backend/base/axiestudio/io/: __init__.py  schema.py
src/backend/base/axiestudio/legacy_custom/: customs.py
src/backend/base/axiestudio/load/: load.py  utils.py
src/backend/base/axiestudio/logging/: logger.py  setup.py
src/backend/base/axiestudio/processing/: process.py
src/backend/base/axiestudio/schema/: artifact.py  content_types.py  data.py  dataframe.py  graph.py  image.py  log.py  message.py  playground_events.py  schema.py
src/backend/base/axiestudio/serialization/: serialization.py
src/backend/base/axiestudio/services/: deps.py  factory.py  manager.py  utils.py
src/backend/base/axiestudio/template/: __init__.py  utils.py
src/backend/base/axiestudio/utils/: component_utils.py  concurrency.py  data_structure.py  schemas.py  template_validation.py  util.py  util_strings.py  validate.py  version.py  voice_utils.py
src/backend/tests/: conftest.py
src/backend/tests/data/: ChatInputTest.json  MemoryChatbotNoLLM.json  Openapi.json  SimpleAPITest.json  TwoOutputsTest.json  Vector_store.json  WebhookTest.json  basic_example.json  complex_example.json  env_variable_test.json  grouped_chat.json  one_group_chat.json  vector_store_grouped.json
src/backend/tests/locust/: locustfile.py
src/backend/tests/performance/: test_server_init.py
src/frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.mts
src/frontend/public/: manifest.json
src/frontend/src/: flow_constants.tsx
src/frontend/src/CustomNodes/GenericNode/: index.tsx
src/frontend/src/constants/: alerts_constants.tsx  constants.ts
src/frontend/src/contexts/: authContext.tsx
src/frontend/src/controllers/API/: api.tsx  index.ts
src/frontend/src/customization/: config-constants.ts  constants.ts  feature-flags.ts
src/frontend/src/customization/components/: custom-axiestudio-counts.tsx  custom-langflow-counts.tsx  custom-loader.tsx  custom-store-sidebar.tsx
src/frontend/src/customization/utils/: custom-get-access-token.ts  urls.ts
src/frontend/src/modals/IOModal/: playground-modal.tsx
src/frontend/src/modals/saveChangesModal/: index.tsx
src/frontend/src/modals/secretKeyModal/: index.tsx
src/frontend/src/modals/shareModal/: index.tsx
src/frontend/src/pages/AppInitPage/: index.tsx
src/frontend/src/pages/DeleteAccountPage/: index.tsx
src/frontend/src/pages/LoginPage/: index.tsx
src/frontend/src/pages/Playground/: index.tsx
src/frontend/src/pages/SettingsPage/: index.tsx
src/frontend/src/pages/SignUpPage/: index.tsx
src/frontend/src/stores/: authStore.ts  darkStore.ts  flowStore.ts  shortcuts.ts  storeStore.ts
src/frontend/src/style/: applies.css
src/frontend/src/utils/: buildUtils.ts  reactflowUtils.ts
src/frontend/tests/: custom_component_full.ts
src/frontend/tests/assets/: ChatTest.json  collection.json  flow.json  flow_group_test.json  flow_test_drag_and_drop.json  flowtest.json  group_test_iadevs.json  outdated_flow.json  test-file.json
src/frontend/tests/core/features/: auto-login-off.spec.ts  customComponentAdd.spec.ts  freeze-path.spec.ts  freeze.spec.ts  stop-building.spec.ts  user-flow-state-cleanup.spec.ts
src/frontend/tests/core/integrations/: Custom Component Generator.spec.ts  Hierarchical Agent.spec.ts  News Aggregator.spec.ts  Simple Agent.spec.ts  Twitter Thread Generator.spec.ts  Vector Store.spec.ts  decisionFlow.spec.ts  similarity.spec.ts  starter-projects.spec.ts
src/frontend/tests/core/unit/: codeAreaModalComponent.spec.ts  dropdownComponent.spec.ts  linkComponent.spec.ts  queryInputComponent.spec.ts  tabComponent.spec.ts  tableInputComponent.spec.ts
src/frontend/tests/extended/features/: actionsMainPage-shard-0.spec.ts  dragAndDrop.spec.ts  files-page.spec.ts  langflowShortcuts.spec.ts  mcp-server-tab.spec.ts  stop-button-playground.spec.ts  store-shard-3.spec.ts  userSettings.spec.ts  validate-raise-errors-components.spec.ts
src/frontend/tests/utils/: add-flow-to-test-on-empty-langflow.ts  add-new-user-and-loggin.ts  await-bootstrap-test.ts  login-langflow.ts
(+583 files in other folders)
